Fix #219 Buttons have wrong colors

--- a/src/pages/create-banner/create-banner.less
+++ b/src/pages/create-banner/create-banner.less
@@ -216,3 +216,24 @@
     background: none !important;
   }
 }
+
+.positive-action-button {
+  background: #077561;
+  color: white;
+  padding: 0.5em 2em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+
+  &:disabled {
+    background: gray;
+    color: lightgray;
+    cursor: not-allowed;
+  }
+}
+
+.mobile-switch-submit-button {
+  flex-grow: 0;
+  white-space:nowrap;
+  width: auto;
+}
